--- a/styles/architects.css
+++ b/styles/architects.css
@@ -5,7 +5,6 @@
   font-family: "Lato", sans-serif;
   font-family: "Open Sans", sans-serif;
   font-family: "Work Sans", sans-serif;
-  max-width: 100%;
 }
 
 .btn-primary {
@@ -17,6 +16,7 @@
   padding: 10px;
   color: #ffffff;
   text-align: center;
+  cursor: pointer;
   margin-bottom: 10px;
 }
 
@@ -78,4 +78,28 @@ nav a {
   margin-bottom: 32px;
 }
 
+.banner-img {
+  margin-top: 40px;
+  width: 100%;
+}
 /* banner styles */
+
+/* responsive banner styles */
+@media screen and (max-width: 576px) {
+  header {
+    padding: 20px;
+  }
+  nav {
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 960px) {
+  header {
+    padding: 20px;
+  }
+  nav {
+    flex-direction: column;
+  }
+}
+/*responsive banner styles  */
